# RedisXLM

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
c++/: CMakeLists.txt  redismodule.h
c++/src/: define.h  errors.h  module.cpp  module.h  object.h  redismodule.cpp  redismodule.h  redisxlm.cpp  redisxlm.h
c++/src/command/: base_cmd.h  inference_chat_cmd.cpp  inference_chat_cmd.h
c++/src/model/: base_lm.h  gemma_lm.cpp  gemma_lm.h
c++/src/utils/: strings.h  worker_pool.cpp  worker_pool.h
c/llama/: Makefile  llama2.c  llama2.h  module.c  redisxlm_llama.c  redisxlm_llama.h
docs/: c_cpp_properties.json  launch.json
rust/examples/: async_thread_pool_block.rs  demo_llamacpp.rs
rust/llamacpp/: Cargo.toml
rust/llamacpp/src/: lib.rs  types.rs
rust/utils/: Cargo.toml
rust/utils/src/: config.rs  lib.rs
