
[package]
name = "redisxlm"
version = "0.1.0"
authors = ["weedge <weege007@gmail.com>"]
edition = "2021"
publish = ["git"]
#build = "build.rs"
description = "building Redis x LM modules in Rust"
license = "MIT"
repository = "https://github.com/weedge/redisxlm"
keywords = ["redis", "lm"]
categories = ["database"]
exclude = [".gitignore", ".github/**"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
crate-type = ["cdylib"]
path = "rust/examples/demo_llamacpp.rs"
name = "demo_llamacpp"

[[test]]
path = "rust/tests/demo.rs"
name = "demo"

[dependencies]
redis-module = { version = "2.0.7", features = ["default"] }
llama_cpp = { git = "https://github.com/edgenai/llama_cpp-rs", branch = "main", features = [
    "native",
] }
futures = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
anyhow = "1"
redis = "0.25"
[dev-dependencies.regex]
version = "1.3"
default-features = false
# Unless you have a specific reason not to, it's good sense to enable standard
# library support. It enables several optimizations and avoids spin locks. It
# also shouldn't meaningfully impact compile times or binary size.
features = ["std"]

[workspace]
members = ["rust/llamacpp"]

[workspace.dependencies]

[workspace.package]
edition = "2021"
publish = ["git"]
license = "MIT"
exclude = [".gitignore", ".github/**"]
repository = "https://github.com/weedge/redisxlm"

[profile.release]
#debug = 1
#opt-level = "z"     # Optimize for size.
#lto = true          # Enable Link Time Optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations.
#panic = "abort"     # Abort on panic
#strip = true        # Automatically strip symbols from the binary.
