[package]
name = "utils"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = { workspace = true }
serde = { workspace = true }
